Revert changes to apply overflow styles on inline equations, it's causing a number of layout issues

--- a/toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
+++ b/toolkits/global/packages/global-article/scss/50-components/article-enhanced.scss
@@ -1843,12 +1843,6 @@
 	}
 }
 
-.mathjax-tex .MathJax {
-	display: inline-block;
-	overflow: auto;
-	max-width: 100%;
-}
-
 .c-article-equation__number {
 	min-width: 35px;
 }
